--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,7 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
-      run:|
-         ls
+        run:ls
     - name: Upload Linux File amd64
       uses: actions/upload-release-asset@v1
       env:
