--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,14 +7,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: 查看当前文件
+    - name: 打包当前文件
       run: |
-        ls
-    - name: PyInstaller Linux amd64
-      id: amd64
-      uses: action-python/pyinstaller-py3.7@amd64
-      with:
-        path: .
+        pip install pyinstaller
+        pyinstaller -F *.py
+        
+    #- name: PyInstaller Linux amd64
+    #  id: amd64
+    #   uses: action-python/pyinstaller-py3.7@amd64
+    #  with:
+    #    path: .
 
     - name: Create Release
       id: create_release
