--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,24 +19,34 @@ jobs:
     #  with:
     #    path: .
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: v0.11
-        release_name: pythonproxy v0.11
-        draft: false
-        prerelease: false
-        files: dist/*
+   # - name: Create Release
+     # id: create_release
+     # uses: actions/create-release@v1
+     # env:
+     #   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+     # with:
+       # tag_name: v0.11
+      #  release_name: pythonproxy v0.11
+      #  draft: false
+       # prerelease: false
+    - name: Create Release and Upload Release Asset
+        uses: softprops/action-gh-release@v1
+        with:
+            tag_name: V0.1 # 你也可以将其输入为V1.2……
+            name: V0.1 # 你也可以将其输入为V1.2……
+            body: TODO New Release.
+            draft: false  # 是否是草稿
+            prerelease: true # 是否是预览版
+            files: |
+            # 你要上传的文件
+                dist/*
 
-    - name: Upload Linux File amd64
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: ${{ steps.amd64.outputs.location }}
-          asset_name: ${{ steps.amd64.outputs.filename }}
-          asset_content_type: ${{ steps.amd64.outputs.content_type }}
+    #- name: Upload Linux File amd64
+     # uses: actions/upload-release-asset@v1
+     # env:
+      #  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #  with:
+       #   upload_url: ${{ steps.create_release.outputs.upload_url }} 
+        #  asset_path: ${{ steps.amd64.outputs.location }}
+        #  asset_name: ${{ steps.amd64.outputs.filename }}
+       #   asset_content_type: ${{ steps.amd64.outputs.content_type }}
