--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,24 @@ on:
   push:
 jobs:
   build:
+ #   runs-on: ubuntu-latest
+    name: 打包各种系统程序
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # build and publish in parallel: linux/386, linux/amd64, windows/386, windows/amd64, darwin/amd64, darwin/arm64
+        goos: [linux, windows, darwin]
+        goarch: ["386", amd64, arm, arm64]
+        exclude:
+          - goos: darwin
+            goarch: arm
+          - goos: darwin
+            goarch: "386"
+          - goos: windows
+            goarch: arm64
+          - goos: windows
+            goarch: arm
+      fail-fast: true
     steps:
     - uses: actions/checkout@master
     - name: 打包当前文件
@@ -32,9 +49,9 @@ jobs:
     - name: Create Release and Upload Release Asset
       uses: softprops/action-gh-release@v1
       with:
-          tag_name: V0.1 # 你也可以将其输入为V1.2……
-          name: V0.1 # 你也可以将其输入为V1.2……
-          body: TODO New Release.
+          tag_name: V0.${{ github.run_id }}.dev #V0.1 # 你也可以将其输入为V1.2……
+          name: V0.${{ github.run_id }}.dev #V0.1 # 你也可以将其输入为V1.2……
+          body: 测试自动发布版本号
           draft: false  # 是否是草稿
           prerelease: true # 是否是预览版
           files: |
