--- a/.github/workflows/fuck.yml
+++ b/.github/workflows/fuck.yml
@@ -15,10 +15,11 @@ jobs:
     - name: 发布打包程序
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: V0.${{ github.run_id }} # 你也可以将其输入为V1.2……
-        name: V0.${{ github.run_id }} # 你也可以将其输入为V1.2……
-        body: TODO New Release.
-        draft: false  # 是否是草稿
-        prerelease: true # 是否是预览版
-        files: |
-            dist/*
+          tag_name: V0.${{ github.run_id }}.dev #V0.1 # 你也可以将其输入为V1.2……
+          name: V0.${{ github.run_id }}.dev #V0.1 # 你也可以将其输入为V1.2……
+          body: 测试自动发布版本号
+          draft: false  # 是否是草稿
+          prerelease: true # 是否是预览版
+          files: |
+            # 你要上传的文件
+              dist/*
