--- a/.github/workflows/fuck.yml
+++ b/.github/workflows/fuck.yml
@@ -4,8 +4,7 @@ on:
   push:
 jobs:
   build:
-   # runs-on: ubuntu-latest
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         include:
