--- a/.github/workflows/fuck.yml
+++ b/.github/workflows/fuck.yml
@@ -22,14 +22,15 @@ jobs:
       run: |
         pip install pyinstaller
         pyinstaller -F *.py
-        
+        ls
+        pwd
     - name: 发布打包程序
       uses: softprops/action-gh-release@v1
       with:
-          tag_name: V0.${{ github.run_id }}.dev #V0.1 # 你也可以将其输入为V1.2……
-          name: V0.${{ github.run_id }}.dev #V0.1 # 你也可以将其输入为V1.2……
+          tag_name: V0.${{ github.run_id }} #V0.1 # 你也可以将其输入为V1.2……
+          name: V0.${{ github.run_id }} #V0.1 # 你也可以将其输入为V1.2……
           body: 测试自动发布版本号
           draft: false  # 是否是草稿
           prerelease: true # 是否是预览版
           files: |
-              *
+              dist/
