--- a/.github/workflows/fuck.yml
+++ b/.github/workflows/fuck.yml
@@ -11,7 +11,7 @@ jobs:
           - goarch: amd64
             goos: linux
           - goarch: amd64
-            goos: darwin
+            goos: windows
           - goarch: arm64
             goos: linux
           - goarch: arm64
@@ -22,15 +22,17 @@ jobs:
       run: |
         pip install pyinstaller
         pyinstaller -F *.py
-        ls
+        
         pwd
+        cd /dist
+        ls
     - name: 发布打包程序
       uses: softprops/action-gh-release@v1
       with:
-          tag_name: V0.${{ github.run_id }} #V0.1 # 你也可以将其输入为V1.2……
-          name: V0.${{ github.run_id }} #V0.1 # 你也可以将其输入为V1.2……
+          tag_name: V1.${{ github.run_id }} #V0.1 # 你也可以将其输入为V1.2……
+          name: V1.${{ github.run_id }} #V0.1 # 你也可以将其输入为V1.2……
           body: 测试自动发布版本号
           draft: false  # 是否是草稿
           prerelease: true # 是否是预览版
           files: |
-              dist/
+              dist/helloworld*
