--- a/.github/workflows/fuck.yml
+++ b/.github/workflows/fuck.yml
@@ -10,6 +10,8 @@ jobs:
         include:
           - goarch: amd64
             goos: linux
+          - goarch: amd64
+            goos: darwin
           - goarch: arm64
             goos: linux
           - goarch: arm64
