--- a/.github/workflows/fuck.yml
+++ b/.github/workflows/fuck.yml
@@ -24,9 +24,6 @@ jobs:
         pip install pyinstaller
         pyinstaller -F *.py
         
-        pwd
-        cd /dist
-        ls
     - name: 发布打包程序
       uses: softprops/action-gh-release@v1
       with:
@@ -36,4 +33,4 @@ jobs:
           draft: false  # 是否是草稿
           prerelease: true # 是否是预览版
           files: |
-              dist/helloworld*
+              /dist/helloworld*
