--- a/.github/workflows/fuck.yml
+++ b/.github/workflows/fuck.yml
@@ -25,8 +25,10 @@ jobs:
       run: |
         uname -a
         ls
-       # pip install pyinstaller
-        #pyinstaller -F *.py
+        
+        pip install pyinstaller
+        pyinstaller -F *.py
+        ls
        # tar -zcvf ${{ matrix.goos }}_${{ matrix.goarch }}.tar.gz dist
         
     - name: 发布打包程序
