--- a/.github/workflows/github actions.yaml
+++ b/.github/workflows/github actions.yaml
@@ -1,9 +1,9 @@
-name: Python package
+.name: Python package
 
 on: 
     push
-watch:
-    types: [started]
+    watch:
+        types: [started]
 jobs:
   build:
 
