--- a/.github/workflows/github actions.yaml
+++ b/.github/workflows/github actions.yaml
@@ -1,9 +1,11 @@
 .name: Python package
 
 on: 
-    push
-    watch:
-        types: [started]
+  push:
+    #branches:
+    #- 'main'
+  watch:
+    types: [started]
 jobs:
   build:
 
